tests/sksl/errors/UnscopedVariableInFor.glsl
### Compilation failed:

error: 2: variable 's' must be created in a scope
1 error
